// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformer-attributify > basic 1`] = `
"<script setup lang=\\"ts\\">
import { ref } from 'vue'
const bool = ref<boolean>()
const c = 'text-red'
</script>

<template>
  <div class=\\"text-center aaa p-2.5 text-blue\\" :class=\\"c\\">
    <div  class=\\"text-4xl text-green p-2 ma\\"/>
    <div :class=\\"\`p-2.5 \${bool ? 'p-0.5 m-0.5' : ''}\`\\" :hover-class=\\"['!bg-green']\\"  class=\\"m-2\\"/>
    <div class=\\"p-1 flex flex-col flex-gap-1 items-center\\" />
    <div class=\\"b b-green text-right h-10 !text-pink\\">
      123456789
    </div>
    <div class=\\"text-purple b b-green\\" :hover-class=\\"['!bg-green', bool ? '' : 'text-red']\\">
      123456789
    </div>
    <div  class=\\"i-carbon:logo-twitter dark:i-carbon:logo-github\\"/>
    <div  class=\\"i-carbon-logo-twitter dark:i-carbon-logo-github mt-2.5\\"/>
    <div class=\\"[&>div]:w-10 text-red\\">
      <div block class=\\"text-left\\">
        1
      </div>
      <div class=\\"color-[#233] text-center\\">
        2
      </div>
      <div class=\\"text-right\\">
        3
      </div>
    </div>
    <div class=\\"size-10 size-20\\" />
    <div
      class=\\"relative rounded-full bg-context text-white a-transition dark:bg-op80 dark:text-op80\\"
      :class=\\"[\`a-switch-\${size}\`, bool ? \`a-\${type}\` : 'text-gray3', { '!text-gray2 dark:!text-gray4': disabled }, cc]\\"
      :style=\\"cs\\" @click=\\"toggle\\"
    />
  </div>
</template>
"
`;

exports[`transformer-attributify > prefixedOnly 1`] = `
"<script setup lang=\\"ts\\">
import { ref } from 'vue'
const bool = ref<boolean>()
const c = 'text-red'
</script>

<template>
  <div class=\\"text-center aaa\\" p=\\"2.5\\" text-blue :class=\\"c\\">
    <div text=\\"4xl\\" text-green ma  class=\\"p-2\\"/>
    <div :class=\\"\`p-2.5 \${bool ? 'p-0.5 m-0.5' : ''}\`\\" m-2 :hover-class=\\"['!bg-green']\\" />
    <div flex=\\"~ col gap-1\\" class=\\"p-1\\" items-center />
    <div text-right h-10 text=\\"!pink\\" class=\\"b b-green\\">
      123456789
    </div>
    <div class=\\"text-purple b b-green\\" :hover-class=\\"['!bg-green', bool ? '' : 'text-red']\\">
      123456789
    </div>
    <div i-carbon:logo-twitter dark:i-carbon:logo-github />
    <div i-carbon-logo-twitter dark:i-carbon-logo-github mt-2.5 />
    <div class=\\"[&>div]:w-10\\" text-red>
      <div text-left block>
        1
      </div>
      <div text-center class=\\"color-[#233]\\">
        2
      </div>
      <div text-right>
        3
      </div>
    </div>
    <div class=\\"size-10\\" size=\\"20\\" />
    <div
      class=\\"relative rounded-full bg-context text-white a-transition dark:bg-op80 dark:text-op80\\"
      :class=\\"[\`a-switch-\${size}\`, bool ? \`a-\${type}\` : 'text-gray3', { '!text-gray2 dark:!text-gray4': disabled }, cc]\\"
      :style=\\"cs\\" @click=\\"toggle\\"
    />
  </div>
</template>
"
`;
